# neon-hub-config

./: Dockerfile  Dockerfile.frontend  LICENSE  README.md  Taskfile.yml  pyproject.toml  sbom.json
.github/workflows/: publish.yml
frontend/: package.json  pnpm-lock.yaml  sbom.json
frontend/neon-hub-config/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.tsbuildinfo
frontend/neon-hub-config/src/: App.tsx  index.css
frontend/neon-hub-config/src/components/: Advanced.tsx  ConnectedDevices.tsx  Header.tsx  HubManagementUI.tsx  HubUpdates.tsx  Login.tsx  LogoutButton.tsx  NodeServices.tsx  SecretField.tsx  SystemUpdates.tsx  YAMLEditors.tsx
frontend/neon-hub-config/src/components/ui/: tooltip.tsx
frontend/neon-hub-config/src/context/: AuthContext.tsx
frontend/neon-hub-config/src/lib/: utils.ts
neon_hub_config/: main.py
neon_hub_config/static/: index.html
neon_hub_config/static/assets/: index-B5dpZpYT.css  index-BcNJgquW.js  index-BkZ6W0jD.js  index-C-YgbCXr.js  index-C6uqq5vL.css  index-C7N3n5E0.js  index-CB_E8ehr.css  index-CBgCyQBq.js  index-CMfvaZdv.js  index-CnXsjVaS.css  index-D0NsD7Ev.js  index-D1B6Rk9F.js  index-DCRqX0-t.js  index-DP-v2WZp.js  index-DcBOy62o.css  index-DxKiXsPo.css  index-gKsLaVAE.css  index-lMOyu5Go.css  index-nOs3d6K6.js  index-qelk1hi-.js  index-rpyOHdA7.js
