[tool.poetry]
name = "neon-hub-config"
version = "0.1.0"
description = "Neon Hub Configuration Tool"
authors = ["Oscillate Labs <mike@oscillatelabs.net>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.2"
ovos-bus-client = "^0.1.4"
ovos-workshop = "^1.0.2"
ovos-utils = "^0.3.5"
uvicorn = "^0.32.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
